2002-06-12  Ken Raeburn  <raeburn@mit.edu>

	* pty-int.h: Don't include syslog.h.

2002-05-24  Ken Raeburn  <raeburn@mit.edu>

	* sane_hostname.c (pty_make_sane_hostname): Always initialize
	"ai".

2002-03-26  Ken Raeburn  <raeburn@mit.edu>

	* sane_hostname.c: Include fake-addrinfo.h, not fake-addrinfo.c.
	(FAI_PREFIX): Delete.

2002-02-19  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (LIBMINOR): Bump due to change in internals.  (Tom's
	change from 1.2.x branch.)

2001-12-03  Sam Hartman  <hartmans@mit.edu>

	* README: s-pty_init_ets/pty_init/

2001-11-28  Tom Yu  <tlyu@mit.edu>

	* update_utmp.c (PTY_GETUTXENT): Fix typo.  Thanks to Shawn
	Stepper. [fixes krb5-build/1020]

2001-11-19  Tom Yu  <tlyu@mit.edu>

	* update_utmp.c (pty_update_utmp): Patch from Garry Zacheiss to
	kludge around cases where we need to use more than 2 characters of
	LINE in order to avoid conflicts in UT_ID.

2001-10-18  Ezra Peisach  <epeisach@mit.edu>

	* sane_hostname.c (pty_make_sane_hostname): Do not declare addrbuf
	twice, shadowing the first declaration.


2001-10-02  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (includes): Depend on
	$(BUILDTOP)/include/krb5/autoconf.h. Automatic dependencies do not
	work on systems in which shared libraries are build without static
	ones.

2001-09-11  Tom Yu  <tlyu@mit.edu>

	* configure.in: Cosmetic fix in utmpx.ut_exit check.

Wed Sep  5 20:08:21 2001  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in ($(BUILDTOP)/include/krb5/autoconf.h): Add rules to
 	build include/krb5/autoconf.h - this file is wiped out during a
 	make clean and sane_hostname.c depends on it.

2001-08-29  Ken Raeburn  <raeburn@mit.edu>

	* sane_hostname.c: Include socket-utils.h and fake-addrinfo.c.
	(FAI_PREFIX): Define to krb5int_pty.
	(sockaddrlen, do_ntoa): Deleted.
	(pty_make_sane_hostname): Use socklen instead of sockaddrlen.
	Delete support for not having getnameinfo.  Move code for do_ntoa
	inline.

2001-07-02  Tom Yu  <tlyu@mit.edu>
